# devin_rsm

./: .gitignore  .pre-commit-config.yaml  FRONTEND_SETUP.md  README.md  development-roadmap.md
backend/: .env.example  .gitignore  README.md  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_1759948991_add_user_model.py  001_1760020500_initial_schema.py  002_1728571699_add_cost_centers.py  002_1760000300_add_role_and_user_role.py  003_1728571800_add_customer_models.py  003_1760004800_add_company_store_access.py  004_1728658789_add_items_and_service_types.py  d995159813bc_add_company_gstin_id_foreign_key_to_.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routers/: auth.py  companies.py  cost_centers.py  customers.py  items.py  service_types.py  users.py  (+1 more)
backend/app/core/: config.py  exceptions.py  logging.py  rbac.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  company.py  company_cost_center.py  company_gstin.py  cost_center.py  customer.py  customer_address.py  customer_contact.py  item.py  role.py  service_type.py  store.py  user.py  user_role.py  user_store_access.py
backend/app/schemas/: __init__.py  auth.py  company.py  cost_center.py  customer.py  item.py  service_type.py  store.py  user.py  user_store_access.py
backend/app/tasks/: __init__.py
backend/app/tests/: conftest.py  test_smoke.py
backend/scripts/: check_async_routes.py  export_openapi.py  seed_cost_centers.py  seed_roles.py  seed_service_types.py  seed_users.py
(+89 files in other folders)
